--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,52 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 /*& start : ghizlane  */
+
+/** nav */
+header {
+    padding: 0 3rem;
+    font-family: "Segoe UI";
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+}
+
+.logo {
+    color: #6d48e5;
+    font-size: x-large;
+    font-weight: bold;
+}
+
+.about {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+a {
+    text-decoration: none;
+}
+
+button {
+    font-family: "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
+        "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+        "Segoe UI Symbol", "Noto Color Emoji";
+    width: 90px;
+    height: 40px;
+    background-color: #6d48e5;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
 
 /*& end : ghizlane  */
 
