[complet] third section

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,8 +3,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Segoe UI", "Helvetica Neue", Arial, "Noto Sans",
-    "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol", "Noto Color Emoji";
+        "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+        "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 /*& start : ghizlane  */
@@ -74,6 +74,7 @@ button {
 .part5>a img {
     width: 100px;
 }
+
 /*& end : ghizlane  */
 
 /*! start : ibrahim  */
@@ -86,9 +87,7 @@ button {
 }
 
 .first-div {
-    
     text-align: center;
-
 }
 
 .second-div {
@@ -112,7 +111,7 @@ button {
     color: #818198;
 }
 
-.first-img{
+.first-img {
     border: none;
     border-radius: 50%;
     padding: 10px;
@@ -122,6 +121,46 @@ button {
 .first-hrading {
     text-align: center;
     font-weight: 450;
+}
+
+/** third-section !*/
+.third-section {
+    padding: 3rem;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5rem;
+    padding: 2rem;
+
+}
+
+.section-div {
+    display: flex;
+    flex-direction: column;
+    font-size: 1rem;
+    gap: 1rem;
+}
+
+.second-heading3 {
+    text-align: center;
+    font-weight: 450;
+}
+
+.second-heading2 {
+    font-weight: 500;
+}
+
+.section-div a {
+    color: #8798ab;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.section-div span {
+    border-bottom: 1px #818198 solid;
 }
 
 /*! end : ibrahim  */
